$Id$

2004.11.10 [Olivier]
  * add GPack.paned#position

2004.10.24 [Olivier]
  * add a .mli for GnoDruid, reorganize gnoDruid.ml a bit
  * add the single-paragraph-mode property in GtkCellRendererText

2004.10.05 [Jacques]
  * revise Timeout.add and Idle.add for compatibility
    (optional arguments must be followed by a non-labeled argument)

2004.10.02 [Jacques]
  * 2.2 compatibility fixes (G_STRFUNC only defined in 2.4)

2004.09.21 [Olivier]
  * add optional priority argument for timeouts and idle callbacks in Glib
  * get rid of the print handler in Glib.Message (it's not used by libraries)
  * get rid of the Glib.Critical exception (callbacks should never raise exceptions)
  * add Glib.Message.log and a couple other functions related to logging
  * generally prevent exceptions from escaping callbacks

2004.09.18 [Jacques]
  * revert to using `OTHER in Gobject.data_kind

2004.09.17 [Olivier]
  * more unicode fixes, add a Utf8.to_unichar_validated function

2004.09.17 [Jacques]
  * Gobject.Data.boxed parameterized by the real type, to be able to
    create tree store columns from it. Gobject.fundamental_type
    modified accordingly.

2004.09.15 [Olivier]
  * add GText.buffer#select_range

2004.09.14 [Olivier]
  * add a few unicode-related functions 

2004.09.08 [Olivier]
  * add GAction.ui_manager#add_ui
  * have #get_widget and #get_action raise Not_found instead of
    Null_pointer. 

2004.09.03 [Olivier]
  * in GAction.action_group, do not merge #add_action and
    #add_action_with_accel in a single method because they have
    different behaviour. Fixes a bug where stock items accelerators
    were not connected.
  * add the padding properties of GBin.alignment (2.4)

2004.08.27 [Olivier]
  * add GTree.cell_layout#reorder and GTree.cell_layout#set_cell_data_func
  * add a couple of utility functions in Glib
  * decimate ml_gtkmisc.c, add a couple of things to GtkCalendar and GtkLabel

2004.08.24 [Olivier]
  * add GWindow.message_dialog#set_markup (2.4)